data/derived/comb/progs/unify/prog1492.ml.out
Characters 78-79:
  []::a
      ^
Error: This expression has type 'a list * 'b
       but an expression was expected of type 'c list list
